--- a/index.html
+++ b/index.html
@@ -6,22 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MADAM MONOROM | HTML CSS Sandbox </title>
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="all" />
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
     <header>
+		<div class="menubutton">
+        <span class="top"></span>
+        <span class="middle"></span>
+        <span class="bottom"></span>
+    </div>
+    
 		<div class="container">
-			<h2><a href="index.html">UX research</a></h2>
+			<h2><a href="index.html">Systemint Game</a></h2>
 		</div>
 	</header>
-	<div class="menubutton"><a href="#" title="Menu"><i class="fas fa-bars fa-2x"></i> </a></div>
+	
 	<nav id="mainnav">
 		<div class="container">
 			<ul>
 				<li><a href="index.html" class="selected">home</a></li>
-				<li><a href="design.html">design</a></li>
-				<li><a href="#">network</a></li>
-				<li><a href="#">contact</a></li>
+				<li><a href="design.html">Spiel</a></li>
+				<li><a href="#">Lehrpersonen</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Kontakt</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -29,8 +37,8 @@
 		<div class="container">
 			<div class="prtcl-row">
 				<div class="col s12 offset-l2 l8">
-					<h1>Most important slogan</h1>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+					<h1>Systemint Game</h1>
+					<p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen Jugendliche den gefährlichen Stoffen auf die Spur...</p>
 				</div>
 			</div>
 			<!-- end row -->
