--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<ul>
 				<li><a href="index.html" class="selected">home</a></li>
-				<li><a href="design.html">Spiel</a></li>
+				<li><a href="">Spiel</a></li>
 				<li><a href="#">Lehrpersonen</a></li>
 				<li><a href="#">Team</a></li>
 				<li><a href="#">Kontakt</a></li>
@@ -48,7 +48,7 @@
 			<div class="container center">
 				<div class="prtcl-row">
 					<div class="col s12 m6 l4 iconbox">
-						<a href="design.html">
+						<a href="">
 							<h3>Design News</h3>
 							<p><i class="fas fa-book-reader fa-5x"></i></p>
 						</a>
@@ -75,7 +75,7 @@
 			<div class="prtcl-row">
 				<div class="col s12 offset-l2 l8">
 					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-					<p>made with Love by <a href="http://monorom.com">MADAM MONOROM</a></p>
+					<p>made with Love by <a href="">MADAM MONOROM</a></p>
 				</div>
 			</div>
 			<!-- end row -->
