Grundstruktur erstellt grid gerichtet für desktop

--- a/index.html
+++ b/index.html
@@ -14,117 +14,121 @@
 <!--BODY-->
 <body>
 
-<!--logo-->
+<!--logo + navbar-->
 <header>
   <div class="menubutton">
     <span class="top"></span>
     <span class="middle"></span>
     <span class="bottom"></span>
   </div>
+	<nav id="mainnav">
+		<div class="logoNavBar">
+			<ul>
+				<li><h1><a href="index.html">Systemint Game</a></h1></li>
+				<!--leerraum-->
+				<li><p> </p></li>
 
-  <div class="container">
-    <h1><a href="index.html">Systemint Game</a></h1>
-  </div>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Spiel</a></li>
+				<li><a href="#">Lehrpersonen</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Kontakt</a></li>
+			</ul>
+		</div>
+  	</nav>
 </header>
-
-<!--		NAVBAR-->
-<!-- todo evtl. sollten wir navbar und header zusammenführen -->
-<nav id="mainnav">
-  <div class="container">
-    <ul>
-      <li><a href="index.html" class="selected">home</a></li>
-      <li><a href="">Spiel</a></li>
-      <li><a href="#">Lehrpersonen</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Kontakt</a></li>
-    </ul>
-  </div>
-</nav>
+<!--end logo + navbar-->
 
 <!--titel-->
-<div role="main" id="content">
-  <div class="container">
-
-    <!--			todo was heisst prtcl-row ?-->
-    <div class="prtcl-row">
-      <div class="col s12 offset-l2 l8">
+<div class="title">
         <h2>WASSERWELTEN</h2>
         <h1>Systemint Game</h1>
-        <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
-          täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
-          Jugendliche den gefährlichen Stoffen auf die Spur...</p>
-      </div>
-      <button type="button">Spielen</button>
-      <button type="button">Kontakt</button>
-    </div>
-    <!-- end row -->
-  </div>
-
-  <!-- end container -->
-  <section id="iconbox">
-    <div class="container center">
-      <div class="prtcl-row">
-        <div class="col s12 m6 l4 iconbox">
-          <a href="">
-            <h3>Design News</h3>
-            <p><i class="fas fa-book-reader fa-5x"></i></p>
-          </a>
-        </div>
-        <div class="col s12 m6 l4 iconbox">
-          <a href="#">
-            <h3>Network</h3>
-            <p><i class="fas fa-project-diagram  fa-5x"></i></p>
-          </a>
-        </div>
-        <div class="col s12 l4 iconbox">
-          <a href="#">
-            <h3>Contact us</h3>
-            <p><i class="fas fa-address-card fa-5x"></i></p>
-          </a>
-        </div>
-      </div>
-      <!-- end row -->
-    </div>
-    <!-- end container -->
-  </section>
-  <!-- end iconbox -->
-  <div class="container">
-    <div class="prtcl-row">
-      <div class="col s12 offset-l2 l8">
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-          consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-          takimata sanctus est Lorem ipsum dolor sit amet.</p>
-        <p>made with Love by <a href="">MADAM MONOROM</a></p>
-      </div>
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
 </div>
-<!-- end content -->
+<!--end titel-->
+
+<div class="intro">
+	<p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
+		täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
+		Jugendliche den gefährlichen Stoffen auf die Spur...</p>
+	<button type="button">Spielen</button>
+	<button type="button">Kontakt</button>
+</div>
+<!-- end intro -->
+
+<!--start neue titel-->
+<div class="title">
+        <h2>Für WEN, Was, Wie?</h2>
+        <h1>Für Lehrpersonen</h1>
+</div>
+<!--end titel-->
+
+<!--start neue Content-->
+<div class="content">
+	<h4>ZIELGRUPPE</h4>
+	<p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus. 
+		Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur 
+		und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
+	<button type="button">Mehr</button>
+</div>
+
+<div class="content">
+	<h4>ZIELE</h4>
+	<p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen, 
+		miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und 
+		Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch 
+		fachliche Ziele der Fächer NT und RZG verfolgt.</p>
+	<button type="button">Mehr</button>
+</div>
+
+<div class="last-content">
+	<h4>ZIELE</h4>
+	<p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt 
+		wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander 
+		in Kontakt.</p>
+	<button type="button">Mehr</button>
+</div>
+<!--end neue Content-->
+
+<!--start neue titel-->
+<div class="title">
+	<h2>ScHULE und GAME DESIGN</h2>
+	<h1>DAS TEAM</h1>
+</div>
+<!--end titel-->
+
+<!--start neue Content-->
+<div class="content-no-button">
+	<h4>TEAM</h4>
+	<ul>
+		<li><a href="#">Alain Zanchetta</a></li>
+		<li><a href="#">Madlaina Kalunder</a></li>
+		<li><a href="#">Alexandre Thomas</a></li>
+		<li><a href="#">Matthias von Arx</a></li>
+		<li><a href="#">Angela Thomasius</a></li>
+		<li><a href="#">Rita Hochstrat</a></li>
+		<li><a href="#">Karin Güdel</a></li>
+		<li><a href="#">Swaantje Brinkmann</a></li>
+	</ul>
+</div>
+<!--end neue Content-->
+
+<!--start Footer-->
 <footer>
   <div class="container">
-    <div class="prtcl-row">
-      <div class="col s12 m6 l4">
-        <h3>Contact</h3>
-        <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a
-            href="mailto:no@spam.haha">company@haha.com</a></p>
-      </div>
-      <div class="col s12 m6 l8">
-        <h3>join the network</h3>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua.</p>
-        <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
-            class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
-            class="fab fa-instagram-square fa-3x"></i></a>
-        </p>
-      </div>
+	<h3>Contact</h3>
+	<p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a
+		href="mailto:no@spam.haha">company@haha.com</a></p>
+	</div>
+		<h3>join the network</h3>
+		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+			dolore magna aliquyam erat, sed diam voluptua.</p>
+		<p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
+			class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
+			class="fab fa-instagram-square fa-3x"></i></a>
+		</p>
     </div>
-    <!-- end row -->
   </div>
 </footer>
+<!--end Footer-->
 </body>
 </html>
