wrapper with 12 column grid & responsive content1, content2, content3

--- a/index.html
+++ b/index.html
@@ -70,35 +70,40 @@
 </div>
 <!--end titel-->
 
-<!--start neue Content-->
-<div class="content">
-    <div class="container">
-        <h3>ZIELGRUPPE</h3>
-        <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
-            Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
-            und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
-        <button type="button">Mehr</button>
+<!--start neue Content mit drei Wrapper Elementen-->
+<div class="wrapper">
+    <div class="content1">
+        <div class="container">
+            <h3>ZIELGRUPPE</h3>
+            <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
+                Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
+                und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
+            <button type="button">Mehr</button>
+        </div>
+    </div>
+</div>
+<div class="wrapper">
+    <div class="content2">
+        <div class="container">
+            <h3>ZIELE</h3>
+            <p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen,
+                miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
+                Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
+                fachliche Ziele der Fächer NT und RZG verfolgt.</p>
+            <button type="button">Mehr</button>
+        </div>
     </div>
 </div>
 
-<div class="content">
-    <div class="container">
-        <h3>ZIELE</h3>
-        <p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen,
-            miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
-            Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
-            fachliche Ziele der Fächer NT und RZG verfolgt.</p>
-        <button type="button">Mehr</button>
-    </div>
-</div>
-
-<div class="last-content">
-    <div class="container">
-        <h3>ZIELE</h3>
-        <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
-            wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
-            in Kontakt.</p>
-        <button type="button">Mehr</button>
+<div class="wrapper">
+    <div class="content3">
+        <div class="container">
+            <h3>ZIELE</h3>
+            <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
+                wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
+                in Kontakt.</p>
+            <button type="button">Mehr</button>
+        </div>
     </div>
 </div>
 <!--end neue Content-->
@@ -138,7 +143,8 @@
                 href="mailto:no@spam.haha">company@haha.com</a></p>
 
         <h4>join the network</h4>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et
             dolore magna aliquyam erat, sed diam voluptua.</p>
         <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
                 class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
