--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!--logo + navbar-->
 <header>
   <div class="container">
+<!--    hamburger-->
     <div class="menubutton">
       <span class="top"></span>
       <span class="middle"></span>
@@ -27,7 +28,6 @@
           <li><h1><a href="index.html">Systemint Game</a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
-
           <li><a href="#">Home</a></li>
           <li><a href="#">Spiel</a></li>
           <li><a href="#">Schule</a></li>
@@ -53,8 +53,8 @@
     <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
       täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
       Jugendliche den gefährlichen Stoffen auf die Spur...</p>
-    <button type="button">Spielen</button>
-    <button type="button">Kontakt</button>
+    <button type="button" class="play-btn">Spielen</button>
+    <button type="button" class="contact-btn">Melde Dich</button>
   </div>
 </div>
 
@@ -75,7 +75,7 @@
       <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
         Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
         und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
-      <button type="button">Mehr</button>
+      <button type="button" class="more-btn">Mehr...</button>
     </div>
   </div>
   <!--  CONTENT 2- Ziele   -->
@@ -86,7 +86,7 @@
         miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
         Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
         fachliche Ziele der Fächer NT und RZG verfolgt.</p>
-      <button type="button">Mehr</button>
+      <button type="button" class="more-btn">Mehr...</button>
     </div>
   </div>
   <!--  CONTENT 3 - Durchführung  -->
@@ -96,7 +96,7 @@
       <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
         wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
         in Kontakt.</p>
-      <button type="button">Mehr</button>
+      <button type="button" class="more-btn">Mehr...</button>
     </div>
   </div>
 </div>
