--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--logo + navbar-->
 <header>
   <div class="container">
-<!--    hamburger-->
+    <!--    hamburger-->
     <div class="menubutton">
       <span class="top"></span>
       <span class="middle"></span>
@@ -42,11 +42,10 @@
 <!--            INTRO & TITLE       -->
 <div class="title">
   <div class="container">
-    <h2>WASSERWELTEN</h2>
+    <h2>Wasserwelten</h2>
     <h1>Systemint Game</h1>
   </div>
 </div>
-
 
 <div class="intro">
   <div class="container">
@@ -58,16 +57,15 @@
   </div>
 </div>
 
-
 <!--                 #### TITLE 1 - für Lehrpersonen ####          -->
-<div class="title">
-  <div class="container">
-    <h2>Für WEN, Was, Wie?</h2>
-    <h1>Für Lehrpersonen</h1>
+<div class="container lehrpersonen">
+  <div class="title">
+    <div class="container">
+      <h2>Für WEN, Was, Wie?</h2>
+      <h1>Für Lehrpersonen</h1>
+    </div>
   </div>
-</div>
 
-<div class="container">
   <!--  CONTENT 1 - Zielgruppe  -->
   <div class="wrapper">
     <div class="content1">
@@ -81,7 +79,7 @@
   <!--  CONTENT 2- Ziele   -->
   <div class="wrapper">
     <div class="content2">
-      <h3>ZIELE</h3>
+      <h3>Ziele</h3>
       <p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen,
         miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
         Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
@@ -92,7 +90,7 @@
   <!--  CONTENT 3 - Durchführung  -->
   <div class="wrapper">
     <div class="content3">
-      <h3>DURCHFÜHRUNG</h3>
+      <h3>Durchführung</h3>
       <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
         wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
         in Kontakt.</p>
@@ -101,36 +99,94 @@
   </div>
 </div>
 
-<!--                 #### TITLE 2 - das Team ####          -->
-<div class="title">
-  <div class="container">
-    <h2>SCHULE und GAME DESIGN</h2>
-    <h1>DAS TEAM</h1>
+<!--  CONTENT  - Das Spiel  -->
+<div class="container spiel">
+  <div class="title">
+    <div class="container">
+      <h2>Dem Wasser auf der Spur</h2>
+      <h1>Das Spiel</h1>
+    </div>
   </div>
-</div>
-<!--end titel-->
 
-<!--  CONTENT 4 - Das Team  -->
-<div class="content-no-button">
-  <div class="container">
-    <h3>TEAM</h3>
-    <ul>
-      <li><a href="#">Alain Zanchetta</a></li>
-      <li><a href="#">Madlaina Kalunder</a></li>
-      <li><a href="#">Alexandre Thomas</a></li>
-      <li><a href="#">Matthias von Arx</a></li>
-      <li><a href="#">Angela Thomasius</a></li>
-      <li><a href="#">Rita Hochstrat</a></li>
-      <li><a href="#">Karin Güdel</a></li>
-      <li><a href="#">Swaantje Brinkmann</a></li>
-    </ul>
+  <div class="wrapper">
+    <div class="content1">
+      <h3>Spielen</h3>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea. </p>
+      <button type="button" class="more-btn">Mehr...</button>
+    </div>
+  </div>
+  <div class="wrapper">
+    <div class="content2">
+      <h3>Story</h3>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea. </p>
+      <button type="button" class="more-btn">Mehr...</button>
+    </div>
+  </div>
+  <div class="wrapper">
+    <div class="content3">
+      <h3>Spielstruktur</h3>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea. </p>
+      <button type="button" class="more-btn">Mehr...</button>
+    </div>
   </div>
 </div>
-<!--end neue Content-->
+
+<!--                 #### TITLE 3 - das Team ####          -->
+<div class="container team">
+  <div class="title">
+    <div class="container">
+      <h2>Schule und Gamedesign</h2>
+      <h1>Das Team</h1>
+    </div>
+  </div>
+
+  <div class="content-no-button">
+    <div class="container">
+      <h3>Team</h3>
+      <ul>
+        <li><a href="#">Alain Zanchetta</a></li>
+        <li><a href="#">Madlaina Kalunder</a></li>
+        <li><a href="#">Alexandre Thomas</a></li>
+        <li><a href="#">Matthias von Arx</a></li>
+        <li><a href="#">Angela Thomasius</a></li>
+        <li><a href="#">Rita Hochstrat</a></li>
+        <li><a href="#">Karin Güdel</a></li>
+        <li><a href="#">Swaantje Brinkmann</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!--                 #### TITLE 4 - Kontakt todo          -->
+<div class="container kontakt">
+  <div class="title">
+    <div class="container">
+      <h2>FHNW & Education21</h2>
+      <h1>Kontakt</h1>
+    </div>
+  </div>
+
+  <div class="content-no-button">
+    <p>Projektteam FHNW
+      Madlaina Kalunder & Karin Güdel
+
+      éducation21
+      Angela Thomasius
+
+      PgB Netzwerkwerk MINT-Bildung
+      Sara Venzin</p>
+  </div>
+</div>
 
 <!--start Footer-->
 <footer>
-  <div class="container">
+  <div class="container footer">
     <h3>Contact</h3>
     <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a href="mailto:no@spam.haha">company@haha.com</a>
     </p>
