Add links to hamburger menu

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <li><h1><a href="index.html">Systemint Game</a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Spiel</a></li>
-          <li><a href="#">Schule</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#spiel">Spiel</a></li>
+          <li><a href="#schule">Schule</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
         </ul>
       </div>
     </nav>
@@ -42,7 +42,7 @@
 <!--            INTRO & TITLE       -->
 <div class="title">
   <div class="container">
-    <h2>Wasserwelten</h2>
+    <h2 id="home">Wasserwelten</h2>
     <h1>Systemint Game</h1>
   </div>
 </div>
@@ -61,7 +61,7 @@
 <div class="container lehrpersonen">
   <div class="title">
     <div class="container">
-      <h2>Für WEN, Was, Wie?</h2>
+      <h2 id="schule">Für WEN, Was, Wie?</h2>
       <h1>Für Lehrpersonen</h1>
     </div>
   </div>
@@ -103,7 +103,7 @@
 <div class="container spiel">
   <div class="title">
     <div class="container">
-      <h2>Dem Wasser auf der Spur</h2>
+      <h2 id="spiel">Dem Wasser auf der Spur</h2>
       <h1>Das Spiel</h1>
     </div>
   </div>
@@ -141,7 +141,7 @@
 <div class="container team">
   <div class="title">
     <div class="container">
-      <h2>Schule und Gamedesign</h2>
+      <h2 id="team">Schule und Gamedesign</h2>
       <h1>Das Team</h1>
     </div>
   </div>
@@ -167,7 +167,7 @@
 <div class="container kontakt">
   <div class="title">
     <div class="container">
-      <h2>FHNW & Education21</h2>
+      <h2 id="kontakt">FHNW & Education21</h2>
       <h1>Kontakt</h1>
     </div>
   </div>
