Make navbar right-floated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav id="mainnav">
       <div class="logoNavBar">
         <ul>
-          <li><h1><a href="index.html">Systemint Game</a></h1></li>
+          <li style="float: left"><h1><a href="index.html">Systemint Game</a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
           <li><a href="#home">Home</a></li>
