Added word-break for p fixed navbar to remove overflown elements

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <li><h1><a href="index.html">Systemint Game</a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
-          <li><a href="#">Home</a></li>
+          <li><a id="home" href="#">Home</a></li>
           <li><a href="#">Spiel</a></li>
           <li><a href="#">Schule</a></li>
           <li><a href="#">Team</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a id="contact" href="#">Kontakt</a></li>
         </ul>
       </div>
     </nav>
@@ -61,8 +61,8 @@
 <div class="container lehrpersonen">
   <div class="title">
     <div class="container">
-      <h2>Für WEN, Was, Wie?</h2>
-      <h1>Für Lehrpersonen</h1>
+      <h2>Für Wen, Was, Wie?</h2>
+      <h1>Lehrpersonen</h1>
     </div>
   </div>
 
