make navbar stay at top of the page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
       <span class="bottom"></span>
     </div>
     <nav id="mainnav">
-      <div class="logoNavBar">
-        
         <ul>
           <li><h1><a href="index.html">Systemint Game</a></h1></li>
           <!--leerraum-->
@@ -62,7 +60,7 @@
 <div class="container lehrpersonen">
   <div class="title">
     <div class="container">
-      <h2>Für Wen, Was, Wie?</h2>
+      <h2 id="schule">Für Wen, Was, Wie?</h2>
       <h1>Lehrpersonen</h1>
     </div>
   </div>
