change size of logo

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
     <nav id="mainnav">
         <ul>
-          <li><h1><a href="index.html">Systemint Game</a></h1></li>
+          <li><h1><a href="index.html"><span class="big">Systemint Game</span></a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
-          <li><a id="home" href="#home">Home</a></li>
+          <li><a id="home" href="#homelink">Home</a></li>
           <li><a href="#spiel">Spiel</a></li>
           <li><a href="#schule">Schule</a></li>
           <li><a href="#team">Team</a></li>
@@ -41,7 +41,7 @@
 <!--            INTRO & TITLE       -->
 <div class="title">
   <div class="container">
-    <h2 id="home">Wasserwelten</h2>
+    <h2 id="homelink">Wasserwelten</h2>
     <h1>Systemint Game</h1>
   </div>
 </div>
