change color of logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <nav id="mainnav">
         <ul>
-          <li><h1><a href="index.html"><span class="big">Systemint Game</span></a></h1></li>
+          <li><h1><a href="index.html"><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big"> game</span></a></h1></li>
           <!--leerraum-->
           <li><p></p></li>
           <li><a id="home" href="#homelink">Home</a></li>
