--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     <button type="button" class="play-btn">Spielen</button>
     <button type="button" class="contact-btn">Melde Dich</button>
   </div>
+  <div>
+    <img class="test1" src="images/background3.png" alt="frozen-water-in-pipes">
+  </div>
 </div>
+
 
 <!--                 #### TITLE 1 - für Lehrpersonen ####          -->
 <div class="container lehrpersonen">
@@ -103,6 +107,9 @@
 <!--  CONTENT  - Das Spiel  -->
 <div class="container spiel">
   <div class="title">
+    <div>
+      <img class="test2" src="images/background2.png" alt="frozen-water-in-pipes">
+    </div>
     <div class="container">
       <h2 id="spiel">Dem Wasser auf der Spur</h2>
       <h1>Das Spiel</h1>
