--- a/index.html
+++ b/index.html
@@ -45,25 +45,23 @@
   <div class="container">
     <h2 id="homelink">Wasserwelten</h2>
     <h1>Systemint Game</h1>
-  </div>
-</div>
-
-<div class="intro">
-  <div class="container">
     <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
       täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
       Jugendliche den gefährlichen Stoffen auf die Spur...</p>
-    <button type="button" class="play-btn">Spielen</button>
+    <div>
+      <img class="test1" src="images/background5.png" alt="water-in-pipes">
+    </div> <button type="button" class="play-btn">Spielen</button>
     <button type="button" class="contact-btn">Melde Dich</button>
   </div>
-  <div>
-    <img class="test1" src="images/background5.png" alt="water-in-pipes">
-  </div>
+
 </div>
 
 
 <!--                 #### TITLE 1 - für Lehrpersonen ####          -->
 <div class="container lehrpersonen">
+  <div>
+    <img class="test1" src="images/background6.png" alt="water-in-pipes">
+  </div>
   <div class="title">
     <div class="container">
       <h2 id="schule">Für Wen, Was, Wie?</h2>
