links zeigen jetzt den ganzen Titel navbar verändert sich schöner

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!--logo + navbar-->
 <header>
-  <div class="container">
+  <!--<div class="container">-->
     <!--    hamburger-->
     <div class="menubutton">
       <span class="top"></span>
@@ -32,12 +32,12 @@
           <li><a id="home" href="#homelink">Home</a></li>
           <li><a href="#spiel">Spiel</a></li>
           <li><a href="#schule">Schule</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a id="teamnav" href="#team">Team</a></li>
           <li><a id="contact" href="#kontakt">Kontakt</a></li>
         </ul>
       </div>
     </nav>
-  </div>
+  <!--</div>-->
 </header>
 
 <!--            INTRO & TITLE       -->
